HelloUltraviolet/Fixtures/RejectedSource/FFI/MangleOnNonFFIProcedure/Expected.uv
//! Expected diagnostic metadata for the MangleOnNonFFIProcedure rejected-source specimen.

expectedDiagnostic("E-SYS-3340", "requirement.23.FfiAttributeConstraints")
